force-app/main/default/objects/ConstructionMeasureSets__x/ConstructionMeasureSets__x.object-meta.xml
<CustomObject>
    <description>ConstructionMeasureSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>ConstructionMeasureSets</externalName>
    <label>ConstructionMeasureSets</label>
    <pluralLabel>ConstructionMeasureSets</pluralLabel>
</CustomObject>