force-app/main/default/objects/ConstructionMeasureSets__x/fields/Aedat__c.field-meta.xml
<CustomField>
    <fullName>Aedat__c</fullName>
    <description>Aedat</description>
    <externalDeveloperName>Aedat</externalDeveloperName>
    <label>Aedat</label>
    <length>128</length>
    <type>Text</type>
</CustomField>