force-app/main/default/objects/ConstructionMeasureSets__x/fields/Aenam__c.field-meta.xml
<CustomField>
    <fullName>Aenam__c</fullName>
    <description>Aenam</description>
    <externalDeveloperName>Aenam</externalDeveloperName>
    <label>Aenam</label>
    <length>128</length>
    <type>Text</type>
</CustomField>