force-app/main/default/objects/ConstructionMeasureSets__x/fields/AufnrMaster__c.field-meta.xml
<CustomField>
    <fullName>AufnrMaster__c</fullName>
    <description>AufnrMaster</description>
    <externalDeveloperName>AufnrMaster</externalDeveloperName>
    <label>AufnrMaster</label>
    <length>128</length>
    <type>Text</type>
</CustomField>