force-app/main/default/objects/ConstructionMeasureSets__x/fields/Begru__c.field-meta.xml
<CustomField>
    <fullName>Begru__c</fullName>
    <description>Begru</description>
    <externalDeveloperName>Begru</externalDeveloperName>
    <label>Begru</label>
    <length>128</length>
    <type>Text</type>
</CustomField>