force-app/main/default/objects/ConstructionMeasureSets__x/fields/Cmnum__c.field-meta.xml
<CustomField>
    <fullName>Cmnum__c</fullName>
    <description>Cmnum</description>
    <externalDeveloperName>Cmnum</externalDeveloperName>
    <label>Cmnum</label>
    <length>128</length>
    <type>Text</type>
</CustomField>