force-app/main/default/objects/ConstructionMeasureSets__x/fields/Cmtxt__c.field-meta.xml
<CustomField>
    <fullName>Cmtxt__c</fullName>
    <description>Cmtxt</description>
    <externalDeveloperName>Cmtxt</externalDeveloperName>
    <label>Cmtxt</label>
    <length>128</length>
    <type>Text</type>
</CustomField>