force-app/main/default/objects/ConstructionMeasureSets__x/fields/Cmtyp__c.field-meta.xml
<CustomField>
    <fullName>Cmtyp__c</fullName>
    <description>Cmtyp</description>
    <externalDeveloperName>Cmtyp</externalDeveloperName>
    <label>Cmtyp</label>
    <length>128</length>
    <type>Text</type>
</CustomField>