force-app/main/default/objects/ConstructionMeasureSets__x/fields/Eqfnr__c.field-meta.xml
<CustomField>
    <fullName>Eqfnr__c</fullName>
    <description>Eqfnr</description>
    <externalDeveloperName>Eqfnr</externalDeveloperName>
    <label>Eqfnr</label>
    <length>128</length>
    <type>Text</type>
</CustomField>