force-app/main/default/objects/ConstructionMeasureSets__x/fields/Erdat__c.field-meta.xml
<CustomField>
    <fullName>Erdat__c</fullName>
    <description>Erdat</description>
    <externalDeveloperName>Erdat</externalDeveloperName>
    <label>Erdat</label>
    <length>128</length>
    <type>Text</type>
</CustomField>