force-app/main/default/objects/ConstructionMeasureSets__x/fields/Iwerk__c.field-meta.xml
<CustomField>
    <fullName>Iwerk__c</fullName>
    <description>Iwerk</description>
    <externalDeveloperName>Iwerk</externalDeveloperName>
    <label>Iwerk</label>
    <length>128</length>
    <type>Text</type>
</CustomField>