force-app/main/default/objects/ConstructionMeasureSets__x/fields/Objnr__c.field-meta.xml
<CustomField>
    <fullName>Objnr__c</fullName>
    <description>Objnr</description>
    <externalDeveloperName>Objnr</externalDeveloperName>
    <label>Objnr</label>
    <length>128</length>
    <type>Text</type>
</CustomField>