force-app/main/default/objects/ConstructionMeasureSets__x/fields/Pargr__c.field-meta.xml
<CustomField>
    <fullName>Pargr__c</fullName>
    <description>Pargr</description>
    <externalDeveloperName>Pargr</externalDeveloperName>
    <label>Pargr</label>
    <length>128</length>
    <type>Text</type>
</CustomField>