force-app/main/default/objects/ConstructionMeasureSets__x/fields/ParnrVera__c.field-meta.xml
<CustomField>
    <fullName>ParnrVera__c</fullName>
    <description>ParnrVera</description>
    <externalDeveloperName>ParnrVera</externalDeveloperName>
    <label>ParnrVera</label>
    <length>128</length>
    <type>Text</type>
</CustomField>