force-app/main/default/objects/ConstructionMeasureSets__x/fields/ParvwVera__c.field-meta.xml
<CustomField>
    <fullName>ParvwVera__c</fullName>
    <description>ParvwVera</description>
    <externalDeveloperName>ParvwVera</externalDeveloperName>
    <label>ParvwVera</label>
    <length>128</length>
    <type>Text</type>
</CustomField>