force-app/main/default/objects/ConstructionMeasureSets__x/fields/Posid__c.field-meta.xml
<CustomField>
    <fullName>Posid__c</fullName>
    <description>Posid</description>
    <externalDeveloperName>Posid</externalDeveloperName>
    <label>Posid</label>
    <length>128</length>
    <type>Text</type>
</CustomField>