force-app/main/default/objects/ConstructionMeasureSets__x/fields/Relind__c.field-meta.xml
<CustomField>
    <fullName>Relind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Relind</description>
    <externalDeveloperName>Relind</externalDeveloperName>
    <label>Relind</label>
    <type>Checkbox</type>
</CustomField>