force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzAccc__c.field-meta.xml
<CustomField>
    <fullName>ZzAccc__c</fullName>
    <description>ZzAccc</description>
    <externalDeveloperName>ZzAccc</externalDeveloperName>
    <label>ZzAccc</label>
    <length>128</length>
    <type>Text</type>
</CustomField>