force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzBondAmount__c.field-meta.xml
<CustomField>
    <fullName>ZzBondAmount__c</fullName>
    <description>ZzBondAmount</description>
    <externalDeveloperName>ZzBondAmount</externalDeveloperName>
    <label>ZzBondAmount</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>