force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzBondAmountx__c.field-meta.xml
<CustomField>
    <fullName>ZzBondAmountx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZzBondAmountx</description>
    <externalDeveloperName>ZzBondAmountx</externalDeveloperName>
    <label>ZzBondAmountx</label>
    <type>Checkbox</type>
</CustomField>