force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCivConstName__c.field-meta.xml
<CustomField>
    <fullName>ZzCivConstName__c</fullName>
    <description>ZzCivConstName</description>
    <externalDeveloperName>ZzCivConstName</externalDeveloperName>
    <label>ZzCivConstName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>