force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCivilConst__c.field-meta.xml
<CustomField>
    <fullName>ZzCivilConst__c</fullName>
    <description>ZzCivilConst</description>
    <externalDeveloperName>ZzCivilConst</externalDeveloperName>
    <label>ZzCivilConst</label>
    <length>128</length>
    <type>Text</type>
</CustomField>