force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzContestability__c.field-meta.xml
<CustomField>
    <fullName>ZzContestability__c</fullName>
    <description>ZzContestability</description>
    <externalDeveloperName>ZzContestability</externalDeveloperName>
    <label>ZzContestability</label>
    <length>128</length>
    <type>Text</type>
</CustomField>