force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCostShareColl__c.field-meta.xml
<CustomField>
    <fullName>ZzCostShareColl__c</fullName>
    <description>ZzCostShareColl</description>
    <externalDeveloperName>ZzCostShareColl</externalDeveloperName>
    <label>ZzCostShareColl</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>