force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCostShareCollx__c.field-meta.xml
<CustomField>
    <fullName>ZzCostShareCollx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZzCostShareCollx</description>
    <externalDeveloperName>ZzCostShareCollx</externalDeveloperName>
    <label>ZzCostShareCollx</label>
    <type>Checkbox</type>
</CustomField>