force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCostShareExp__c.field-meta.xml
<CustomField>
    <fullName>ZzCostShareExp__c</fullName>
    <description>ZzCostShareExp</description>
    <externalDeveloperName>ZzCostShareExp</externalDeveloperName>
    <label>ZzCostShareExp</label>
    <length>128</length>
    <type>Text</type>
</CustomField>