force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCrab__c.field-meta.xml
<CustomField>
    <fullName>ZzCrab__c</fullName>
    <description>ZzCrab</description>
    <externalDeveloperName>ZzCrab</externalDeveloperName>
    <label>ZzCrab</label>
    <length>128</length>
    <type>Text</type>
</CustomField>