force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCustContr__c.field-meta.xml
<CustomField>
    <fullName>ZzCustContr__c</fullName>
    <description>ZzCustContr</description>
    <externalDeveloperName>ZzCustContr</externalDeveloperName>
    <label>ZzCustContr</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>