force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzCustContrx__c.field-meta.xml
<CustomField>
    <fullName>ZzCustContrx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZzCustContrx</description>
    <externalDeveloperName>ZzCustContrx</externalDeveloperName>
    <label>ZzCustContrx</label>
    <type>Checkbox</type>
</CustomField>