force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzDeveloper__c.field-meta.xml
<CustomField>
    <fullName>ZzDeveloper__c</fullName>
    <description>ZzDeveloper</description>
    <externalDeveloperName>ZzDeveloper</externalDeveloperName>
    <label>ZzDeveloper</label>
    <length>128</length>
    <type>Text</type>
</CustomField>