force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzDevName__c.field-meta.xml
<CustomField>
    <fullName>ZzDevName__c</fullName>
    <description>ZzDevName</description>
    <externalDeveloperName>ZzDevName</externalDeveloperName>
    <label>ZzDevName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>