force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzDsgOfficer__c.field-meta.xml
<CustomField>
    <fullName>ZzDsgOfficer__c</fullName>
    <description>ZzDsgOfficer</description>
    <externalDeveloperName>ZzDsgOfficer</externalDeveloperName>
    <label>ZzDsgOfficer</label>
    <length>128</length>
    <type>Text</type>
</CustomField>