force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzEleConName__c.field-meta.xml
<CustomField>
    <fullName>ZzEleConName__c</fullName>
    <description>ZzEleConName</description>
    <externalDeveloperName>ZzEleConName</externalDeveloperName>
    <label>ZzEleConName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>