force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzEleConst__c.field-meta.xml
<CustomField>
    <fullName>ZzEleConst__c</fullName>
    <description>ZzEleConst</description>
    <externalDeveloperName>ZzEleConst</externalDeveloperName>
    <label>ZzEleConst</label>
    <length>128</length>
    <type>Text</type>
</CustomField>