force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzEscReportable__c.field-meta.xml
<CustomField>
    <fullName>ZzEscReportable__c</fullName>
    <description>ZzEscReportable</description>
    <externalDeveloperName>ZzEscReportable</externalDeveloperName>
    <label>ZzEscReportable</label>
    <length>128</length>
    <type>Text</type>
</CustomField>