force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzEstmCost__c.field-meta.xml
<CustomField>
    <fullName>ZzEstmCost__c</fullName>
    <description>ZzEstmCost</description>
    <externalDeveloperName>ZzEstmCost</externalDeveloperName>
    <label>ZzEstmCost</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>