force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzEstmCostx__c.field-meta.xml
<CustomField>
    <fullName>ZzEstmCostx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZzEstmCostx</description>
    <externalDeveloperName>ZzEstmCostx</externalDeveloperName>
    <label>ZzEstmCostx</label>
    <type>Checkbox</type>
</CustomField>