force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzExtPm__c.field-meta.xml
<CustomField>
    <fullName>ZzExtPm__c</fullName>
    <description>ZzExtPm</description>
    <externalDeveloperName>ZzExtPm</externalDeveloperName>
    <label>ZzExtPm</label>
    <length>128</length>
    <type>Text</type>
</CustomField>