force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzExtpmName__c.field-meta.xml
<CustomField>
    <fullName>ZzExtpmName__c</fullName>
    <description>ZzExtpmName</description>
    <externalDeveloperName>ZzExtpmName</externalDeveloperName>
    <label>ZzExtpmName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>