force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzFutCostShare__c.field-meta.xml
<CustomField>
    <fullName>ZzFutCostShare__c</fullName>
    <description>ZzFutCostShare</description>
    <externalDeveloperName>ZzFutCostShare</externalDeveloperName>
    <label>ZzFutCostShare</label>
    <length>128</length>
    <type>Text</type>
</CustomField>