force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzGiftedAssetVal__c.field-meta.xml
<CustomField>
    <fullName>ZzGiftedAssetVal__c</fullName>
    <description>ZzGiftedAssetVal</description>
    <externalDeveloperName>ZzGiftedAssetVal</externalDeveloperName>
    <label>ZzGiftedAssetVal</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>