force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzGiftedAssetValx__c.field-meta.xml
<CustomField>
    <fullName>ZzGiftedAssetValx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZzGiftedAssetValx</description>
    <externalDeveloperName>ZzGiftedAssetValx</externalDeveloperName>
    <label>ZzGiftedAssetValx</label>
    <type>Checkbox</type>
</CustomField>