force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzInitials__c.field-meta.xml
<CustomField>
    <fullName>ZzInitials__c</fullName>
    <description>ZzInitials</description>
    <externalDeveloperName>ZzInitials</externalDeveloperName>
    <label>ZzInitials</label>
    <length>128</length>
    <type>Text</type>
</CustomField>