force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzLodgeSpear__c.field-meta.xml
<CustomField>
    <fullName>ZzLodgeSpear__c</fullName>
    <description>ZzLodgeSpear</description>
    <externalDeveloperName>ZzLodgeSpear</externalDeveloperName>
    <label>ZzLodgeSpear</label>
    <length>128</length>
    <type>Text</type>
</CustomField>