force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzMaxDemand__c.field-meta.xml
<CustomField>
    <fullName>ZzMaxDemand__c</fullName>
    <description>ZzMaxDemand</description>
    <externalDeveloperName>ZzMaxDemand</externalDeveloperName>
    <label>ZzMaxDemand</label>
    <length>128</length>
    <type>Text</type>
</CustomField>