force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzMaxDemandUom__c.field-meta.xml
<CustomField>
    <fullName>ZzMaxDemandUom__c</fullName>
    <description>ZzMaxDemandUom</description>
    <externalDeveloperName>ZzMaxDemandUom</externalDeveloperName>
    <label>ZzMaxDemandUom</label>
    <length>128</length>
    <type>Text</type>
</CustomField>