force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzPrjOfficer__c.field-meta.xml
<CustomField>
    <fullName>ZzPrjOfficer__c</fullName>
    <description>ZzPrjOfficer</description>
    <externalDeveloperName>ZzPrjOfficer</externalDeveloperName>
    <label>ZzPrjOfficer</label>
    <length>128</length>
    <type>Text</type>
</CustomField>