force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzRebatePayment__c.field-meta.xml
<CustomField>
    <fullName>ZzRebatePayment__c</fullName>
    <description>ZzRebatePayment</description>
    <externalDeveloperName>ZzRebatePayment</externalDeveloperName>
    <label>ZzRebatePayment</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>