force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzRebatePaymentx__c.field-meta.xml
<CustomField>
    <fullName>ZzRebatePaymentx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZzRebatePaymentx</description>
    <externalDeveloperName>ZzRebatePaymentx</externalDeveloperName>
    <label>ZzRebatePaymentx</label>
    <type>Checkbox</type>
</CustomField>