force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzRetailer__c.field-meta.xml
<CustomField>
    <fullName>ZzRetailer__c</fullName>
    <description>ZzRetailer</description>
    <externalDeveloperName>ZzRetailer</externalDeveloperName>
    <label>ZzRetailer</label>
    <length>128</length>
    <type>Text</type>
</CustomField>