force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzSocTiming__c.field-meta.xml
<CustomField>
    <fullName>ZzSocTiming__c</fullName>
    <description>ZzSocTiming</description>
    <externalDeveloperName>ZzSocTiming</externalDeveloperName>
    <label>ZzSocTiming</label>
    <length>128</length>
    <type>Text</type>
</CustomField>