force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzSourceRef__c.field-meta.xml
<CustomField>
    <fullName>ZzSourceRef__c</fullName>
    <description>ZzSourceRef</description>
    <externalDeveloperName>ZzSourceRef</externalDeveloperName>
    <label>ZzSourceRef</label>
    <length>128</length>
    <type>Text</type>
</CustomField>