force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzSubDivi__c.field-meta.xml
<CustomField>
    <fullName>ZzSubDivi__c</fullName>
    <description>ZzSubDivi</description>
    <externalDeveloperName>ZzSubDivi</externalDeveloperName>
    <label>ZzSubDivi</label>
    <length>128</length>
    <type>Text</type>
</CustomField>