force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzSubdivision__c.field-meta.xml
<CustomField>
    <fullName>ZzSubdivision__c</fullName>
    <description>ZzSubdivision</description>
    <externalDeveloperName>ZzSubdivision</externalDeveloperName>
    <label>ZzSubdivision</label>
    <length>128</length>
    <type>Text</type>
</CustomField>