force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzSubofficer__c.field-meta.xml
<CustomField>
    <fullName>ZzSubofficer__c</fullName>
    <description>ZzSubofficer</description>
    <externalDeveloperName>ZzSubofficer</externalDeveloperName>
    <label>ZzSubofficer</label>
    <length>128</length>
    <type>Text</type>
</CustomField>