force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzTownPermit__c.field-meta.xml
<CustomField>
    <fullName>ZzTownPermit__c</fullName>
    <description>ZzTownPermit</description>
    <externalDeveloperName>ZzTownPermit</externalDeveloperName>
    <label>ZzTownPermit</label>
    <length>128</length>
    <type>Text</type>
</CustomField>