force-app/main/default/objects/ConstructionMeasureSets__x/fields/ZzUnits__c.field-meta.xml
<CustomField>
    <fullName>ZzUnits__c</fullName>
    <description>ZzUnits</description>
    <externalDeveloperName>ZzUnits</externalDeveloperName>
    <label>ZzUnits</label>
    <length>128</length>
    <type>Text</type>
</CustomField>